[project]
name = "ansible-role-zfs"
version = "0.0.0"
description = "Ansible Role for ZFS"
authors = [{ name = "Remerge GmbH", email = "core@remerge.io" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff>=0.12.2,<0.13",
    "ansible-lint>=25.6.1,<26 ; platform_system != 'Windows'",
    "ansible-dev-tools>=25.5.2,<26",
]
test = [
    "pytest>=8.4.1,<9",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
