[project]
name = "ansible-role-zfs"
version = "0.0.0"
description = "Ansible Role for ZFS"
authors = [{ name = "Remerge GmbH", email = "core@remerge.io" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff",
    "ansible-lint ; platform_system != 'Windows'",
    "ansible-dev-tools",
]
test = [
    "pytest",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
