[project]
name = "ansible-role-zfs"
version = "0.0.0"
description = "Ansible Role for ZFS"
authors = [{ name = "Remerge GmbH", email = "core@remerge.io" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff==0.14.6",
    "ansible-lint==25.11.0 ; platform_system != 'Windows'",
    "ansible-dev-tools==25.10.0",
]
test = [
    "pytest==9.0.1",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
